...
    <string name="ui_independent_from_readaloud_same_palette">Independent from Readaloud. Same palette.</string>
    <string name="ui_installed">Installed</string>
    <string name="ui_installed_version">Installed: v%1$s</string>
    <string name="ui_installed_version_up_to_date">Installed: v%1$s · Up to date</string>
    <string name="ui_invert_volume_keys">Invert volume keys</string>
    <string name="ui_justify_text">Justify text</string>
    <string name="ui_keep_screen_on_while_reading">Keep screen on while reading</string>
    <string name="ui_light">Light</string>
    <string name="ui_light_app_reader_theme">Light app reader theme</string>
    <string name="ui_light_app_theme">Light app theme</string>
    <string name="ui_line_spacing">Line spacing</string>
    <string name="ui_link">Link</string>
    <string name="ui_link_an_audiobook">Link an audiobook</string>
...
